[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/plants/BossPlant.gd" type="Script" id=1]
[ext_resource path="res://artwork/BossPlant1.png" type="Texture" id=2]
[ext_resource path="res://artwork/BossPlant3.png" type="Texture" id=3]
[ext_resource path="res://artwork/BossPlant2.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 102.234

[sub_resource type="CapsuleShape2D" id=3]
radius = 47.4088
height = 111.779

[node name="BossPlant" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 3
speed_scale = 0.4
playing = true

[node name="Area2D" type="Area2D" parent="." groups=[
"attackable",
"bossplant",
]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -3.5934, 7.70013 )
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -1.32037, 7.04202 )
shape = SubResource( 3 )

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
